--- a/public/durian/css/style.css
+++ b/public/durian/css/style.css
@@ -42,7 +42,13 @@ th, td {
 }
 
 .shadowX {
-	
 	box-shadow: none
-	
+}
+
+.container1 {
+    box-shadow: 1px 1px 3px 1px #dadce0;
+}
+ 
+.container2 {
+    box-shadow: 1px 1px 3px 1px #dadce0 inset;
 }
