--- a/public/durian/css/style.css
+++ b/public/durian/css/style.css
@@ -1,4 +1,15 @@
 
+@font-face {
+    font-family: 'SDSamliphopangche_Outline';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+	font-family: 'SDSamliphopangche_Outline';
+}
+
 .width80 {
 	width: 80%;
 	margin: auto;
