--- a/public/durian/css/style.css
+++ b/public/durian/css/style.css
@@ -10,6 +10,10 @@
 	font-family: 'SDSamliphopangche_Outline';
 } */
 
+.randomProduct {
+	width: 230px;
+}
+
 .width80 {
 	width: 80%;
 	margin: auto;
