--- a/public/durian/css/style.css
+++ b/public/durian/css/style.css
@@ -14,6 +14,22 @@
 	width: 230px;
 }
 
+.width60 {
+	width: 60%;
+	margin: auto;
+}
+.width70 {
+	width: 70%;
+	margin: auto;
+}
+.width75 {
+	width: 75%;
+	margin: auto;
+}
+.width77 {
+	width: 77%;
+	margin: auto;
+}
 .width80 {
 	width: 80%;
 	margin: auto;
