--- a/public/durian/css/style.css
+++ b/public/durian/css/style.css
@@ -38,16 +38,20 @@
 	width: 80%;
 	margin: auto;
 }
+.width85 {
+	width: 85%;
+	margin: auto;
+}
 .width90 {
 	width: 90%;
 	margin: auto;
 }
-.width95 {
-	width: 95%;
-	margin: auto;
-}
 .width92 {
 	width: 92%;
+	margin: auto;
+}
+.width95 {
+	width: 95%;
 	margin: auto;
 }
 
@@ -98,5 +102,10 @@ th, td {
 
 .nodeco{
 	text-decoration: none;
+}
+
+.form-control1 {
+  display: inline;
+  width: 20%;
 }
 
